--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,6 @@
 {
-    "semi": false,
-    "arrowParens": "avoid",
-    "tabWidth": 2
+  "semi": false,
+  "arrowParens": "avoid",
+  "tabWidth": 2,
+  "singleQuote": true
 }
